[tool.poetry]
name = "cachingutils"
version = "2.0.0"
description = "Utilities for caching in Python."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
repository = "https://github.com/aljbsoft/cachingutils"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lru-dict = "^1.1.7"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
taskipy = "^1.10.1"

[tool.poetry.extras]
redis = ["redis"]

[tool.taskipy.tasks]
fmt = "black . && isort --profile black ."
pre-commit = "pre-commit install"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
